Bug 1478212 - Propagate MediaFeatureChangeReason::SystemMetricsChange into sub frames. r=emilio a=pascalc

A test case covers this will be introduced in bug 1486971.

Differential Revision: https://phabricator.services.mozilla.com/D4998